# pyapp.cookiecutter

./: README.rst  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_name }}/: Pipfile  README.rst  pyproject.toml  requirements.txt
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py  checks.py  cli.py  default_settings.py
{{ cookiecutter.project_name }}/tests/: conftest.py  settings_test.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py  cli.py  default_settings.py
{{ cookiecutter.project_slug }}/: Pipfile  README.rst
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py  checks.py  default_settings.py
